# memoryd

./: .bestpractices.json  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  deny.toml  sonar-project.properties
.cargo/: audit.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/memoryd/: Cargo.toml
crates/memoryd-core/: Cargo.toml  build.rs
crates/memoryd-core/src/: adapters.rs  config.rs  dream.rs  import.rs  importers.rs  lib.rs  localembed.rs  openaicompat.rs  serve_client.rs  store.rs  vectorindex.rs  worker.rs  writer.rs
crates/memoryd/src/: hook.rs  import_sources.rs  integrate.rs  logging.rs  main.rs  mcp.rs  tui.rs
docs/: API.md  ARCHITECTURE-PLAN.md  CAPTURE-GUIDE.md  DYNAMIC-PLAN-LAUNCHER-PROMPT.txt  MILESTONE-TASKS.md  OPENSSF-BEST-PRACTICES.md  OPERATIONS.md  PRODUCTION-READINESS-PLAN.md  PROJECT-CONTEXT.md  ROADMAP-GAPS.md  RUNNING-AS-A-SERVICE.md  SECONDARY-BRAIN-PLAN.md  SECURITY-REVIEW-TASKS.md  SESSION-HANDOFF.md
npm/: README.md  package.json
npm/scripts/: install.js  make-platform-package.js
scripts/: bootstrap-coverage-tool.sh  bootstrap-security-tools.sh  fetch-embed-model.sh
