[package]
name = "memoryd-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rusqlite = { version = "0.40.1", default-features = false, features = ["bundled"] }
serde_json = { version = "1.0.150", default-features = false, features = ["std"] }

[lints]
workspace = true
