[package]
name = "memoryd-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
rusqlite = { version = "0.40.1", default-features = false, features = ["bundled"] }
serde_json = { version = "1.0.150", default-features = false, features = ["std"] }
# In-process embedding (ARCHITECTURE-PLAN local-adapter callout): Rust ONNX
# inference + tokenizer. No C/C++ *runtime* deps (no ort, no onig); tract-linalg
# does assemble SIMD kernels via `cc`, so a C toolchain is required at build time.
tract-onnx = "0.23"
tokenizers = { version = "0.21", default-features = false, features = ["fancy-regex"] }
# HTTP client for the generic OpenAI-compatible provider adapter (embeddings +
# chat completions against any base URL: api.openai.com, Ollama, vLLM, LM
# Studio). rustls-based TLS; no native OpenSSL linkage.
ureq = { version = "2.12", default-features = false, features = ["tls"] }

[build-dependencies]
sha2 = { version = "0.10", default-features = false }

[lints]
workspace = true
