[package]
name = "memoryd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
memoryd-core = { path = "../memoryd-core", version = "0.1.0" }
serde_json = { version = "1.0.150", default-features = false, features = ["std"] }
# Graceful shutdown only (SIGTERM/SIGINT -> AtomicBool). Installing a signal
# handler is impossible in safe std; this is the canonical minimal choice and
# its internal unsafe is outside the workspace forbid(unsafe_code) boundary.
signal-hook = { version = "0.3", default-features = false }

[lints]
workspace = true
